<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/Toolbar.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:gravity="center"
                android:minHeight="60dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_detail_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_name"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/movie_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_12" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/overlay_light_30" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/spacing_large">

                    <TextView
                        android:id="@+id/movie_detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/grey_60"
                        android:textSize="24sp"
                        app:fontFamily="sans-serif-medium" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_large">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_small"
                            android:text="@string/movie_rating"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_40" />

                        <TextView
                            android:id="@+id/movie_detail_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3.0"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_80" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_small"
                            android:text="@string/release_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_40" />

                        <TextView
                            android:id="@+id/movie_detail_releasedate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2020-08-13"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_80" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_large">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_small"
                            android:text="@string/popularity"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_40" />

                        <TextView
                            android:id="@+id/movie_detail_popularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_80" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_small"
                            android:text="@string/adult_film"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_40" />

                        <TextView
                            android:id="@+id/movie_detail_adult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_80" />

                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:text="@string/description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_40"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/movie_detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:lineSpacingExtra="@dimen/spacing_small"
                    android:paddingBottom="@dimen/spacing_large"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_80" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:text="@string/trailers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_40"
                    app:fontFamily="sans-serif-medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trailerListRecycle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/spacing_large"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:scrollbars="vertical"
                    android:scrollingCache="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>